Fixed and Finished
Fixed Link not showing effect for role page and student sign up page

finished front-end for student sign up page

--- a/user_info/style_role_page.css
+++ b/user_info/style_role_page.css
@@ -58,3 +58,16 @@ body, html {
     text-align: center;
     font-size: 18px; /* Set font size for the disclaimer text */
 }
+
+
+.links a {
+    color: #0044cc;
+    text-decoration: none;
+    flex-grow: 1;
+    text-align: center;
+}
+
+/* Add this CSS rule to show underline on hover */
+.links a:hover {
+    text-decoration: underline;
+}
